--- a/learn_sinatra/views/index.erb
+++ b/learn_sinatra/views/index.erb
@@ -4,23 +4,28 @@
 	<meta charset="utf-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<title></title>
-	<link rel="stylesheet" href="">
+	<link rel="stylesheet" href="<%= url("/style.css") %>">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </head>
-<body>
+<body class="container">
 	<h4>List users</h4>
-	<table>
+	<table class="table table-hover">
 		<tr>
 			<th>Id</th>
 			<th>User name</th>
 			<th>Address</th>
+			<th>Update</th>
+			<th>Delete</th>
 		</tr>
 		<%@user.each do |user| %>
 		<tr>
 			<td><%= user['iduser'] %></td>
 			<td><%= user['username'] %></td>
 			<td><%= user['address'] %></td>
-			<td><a href="./update/<%= user['iduser'] %>">update</a></td>
-			<td><a href="./delete/<%= user['iduser'] %>">delete</a></td>
+			<td><a href="./update/<%= user['iduser'] %>"><button class="btn btn-info">Update</button></a></td>
+			<td><a href="./delete/<%= user['iduser'] %>"><button class="btn btn-danger">Delete</button></a></td>
 		</tr>
 		<%end%>
 	</table>
