--- a/book_shelf/app/views/books/index.html.erb
+++ b/book_shelf/app/views/books/index.html.erb
@@ -19,22 +19,7 @@
                  <th>Image</th>
                  <th>Action</th>
               </tr>
-              <%@books.each do |book| %>
-              <tr>
-                <td><%= book['bookname'] %></td>
-                <td><%= book['author'] %></td>
-                <td><%= book['price'] %></td>
-                <td><%= image_tag book.image.thumb.url %></td>
-                <td>
-                  <div class="btn-group">
-                    <%= link_to "Detail", book_path(book) %> |
-                    <%= link_to "Edit", edit_book_path(book) %> |
-                    <%= link_to "Delete", book_path(book), method: :delete, data: {confirm: 'Are you sure?'} %>
-                  </div>
-                </td>
-                
-              </tr>
-              <%end%>
+              <%= render partial: "book", collection: @books %>
             </tbody>
             </table>
             <p><%= link_to "Add new book", new_book_path %></p>
