--- a/book_shelf/app/views/users/index.html.erb
+++ b/book_shelf/app/views/users/index.html.erb
@@ -17,26 +17,10 @@
                  <th>Email</th>
                  <th>Action</th>
               </tr>
-              <%@users.each do |user| %>
-              <tr>
-                <td><%= user['name'] %></td>
-                <td><%= user['email'] %></td>
-                <td>
-                  <div class="btn-group">
-                    <%= link_to "Detail", user_path(user) %> |
-                    <%= link_to "Edit", edit_user_path(user) %> |
-                    <%= link_to "Delete", user_path(user), method: :delete, data: {confirm: 'Are you sure?'} %>
-                  </div>
-                </td>
-                
-              </tr>
-              <%end%>
             </tbody>
+            <%= render partial: "user", collection: @users %>
             </table>
             <p><%= link_to "Add new user", new_user_path %></p>
-
-            <%= render partial: "product", collection: @users %>
-
           </section>
       </div>
   </div>
