--- a/book_shelf/app/views/books/index.html.erb
+++ b/book_shelf/app/views/books/index.html.erb
@@ -15,8 +15,8 @@
               <tr>
                  <th>Book's Name</th>
                  <th>Author</th>
-                 <th>Price</th>
-                 <th>Image</th>
+                 <th>Title</th>
+                 <th>Isn</th>
                  <th>Action</th>
               </tr>
               <%= render partial: "book", collection: @books %>
