--- a/book_shelf/app/views/books/_book.html.erb
+++ b/book_shelf/app/views/books/_book.html.erb
@@ -1,8 +1,8 @@
 <tr>
-  <td><%= book['bookname'] %></td>
+  <td><%= book['name'] %></td>
   <td><%= book['author'] %></td>
-  <td><%= book['price'] %></td>
-  <td><%= image_tag book.image.thumb.url %></td>
+  <td><%= book['title'] %></td>
+  <td><%= book['isn'] %></td>
   <td>
     <div class="btn-group">
       <%= link_to "Detail", book_path(book) %> |
