--- a/book_shelf/app/views/users/show.html.erb
+++ b/book_shelf/app/views/users/show.html.erb
@@ -10,19 +10,44 @@
         <%= flash[:notice] %>
      </div>
     <% end %>
-    <p>
-			<strong>Name:	</strong>
-			<%= @user.name %>
-		</p>
-		<p>
-			<strong>Email:	</strong>
-			<%= @user.email %>
-		</p>
-		<p>
-			<strong>Password:	</strong>
-			<%= @user.password %>
-		</p>
+    <div class="col-lg-4">
+      <%= image_tag @user.avatar %>
+    </div>
+    <div class="col-lg-6" style="font-size: 16px;">
+      <p>
+  			<strong>Name:	</strong>
+  			<%= @user.user_name %>
+  		</p>
+  		<p>
+  			<strong>Email:	</strong>
+  			<%= @user.email %>
+  		</p>
+  		<p>
+  			<strong>Name:	</strong>
+  			<%= @user.name %>
+  		</p>
+      <p>
+        <strong>Gender: </strong>
+        <%= @user.gender %>
+      </p>
+      <p>
+        <strong>Birthday: </strong>
+        <%= @user.birthday %>
+      </p>
+      <p>
+        <strong>Role: </strong>
+        <%= @user.role %>
+      </p>
+      <p>
+        <strong>Provider: </strong>
+        <%= @user.provider %>
+      </p>
+      <p>
+        <strong>Uid: </strong>
+        <%= @user.uid %>
+      </p>
 
-		<%= link_to "back", users_path %>
+  		<%= link_to "back", users_path %>
+    </div>
   </div>
 </section>
