--- a/book_shelf/app/assets/stylesheets/style.css
+++ b/book_shelf/app/assets/stylesheets/style.css
@@ -90,7 +90,22 @@ table tr th { color: #688a7e;}
 
 }
 
+.panel .pagding {
+  padding: 30px 20px;
+}
 
+.panel .pagding a {
+  display: inline-block;
+  border: 1px solid gray;
+  width: 50px;
+  height: 30px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+.panel .pagding a:hover {
+  background: #e8e8e8;
+}
 
 .Creative-pro, .Creative-pro h3{
 
@@ -168,7 +183,7 @@ table tr th { color: #688a7e;}
 
 .login-img3-body{
 
-  background: url('../img/bg-1.jpg') no-repeat center center fixed; 
+  background: url('/assets/bg-1.jpg') no-repeat center center fixed; 
 
   -webkit-background-size: cover;
 
