--- a/book_shelf/app/views/users/_product.html.erb
+++ b/book_shelf/app/views/users/_product.html.erb
@@ -2,8 +2,8 @@
   <td><%= product.user_name %></td>
   <td><%= product.email %></td>
   <td><%= product.role %></td>
-  <td><%= product.name %></td>
-  <td><%= product.gender %></td>
+  <td><%= product.provider %></td>
+  <td><%= product.uid %></td>
   <td>
     <div class="btn-group">
       <%= link_to "Detail", user_path(product) %> |
