--- a/book_shelf/app/views/users/index.html.erb
+++ b/book_shelf/app/views/users/index.html.erb
@@ -5,26 +5,36 @@
     </div>
   </div>
   <div class="row">
-      <div class="col-lg-12">
-          <section class="panel">
-            <header class="panel-heading">
-              List
-            </header>
-            <table class="table table-striped table-advance table-hover">
-            <tbody>
-              <tr>
-                 <th>User Name</th>
-                 <th>Email</th>
-                 <th>Role</th>
-                 <th>Name</th>
-                 <th>Gender</th>
-                 <th>Action</th>
-              </tr>
-              <%= render partial: "product", collection: @users %>
-            </tbody>
-            </table>
-            <p><%= link_to "Add new user", new_user_path %></p>
-          </section>
-      </div>
+    <div class="col-lg-12">
+      <section class="panel">
+        <header class="panel-heading">
+          <p><%= link_to "Add new user", new_user_path %></p>
+        </header>
+        <table class="table table-striped table-advance table-hover">
+          <tbody>
+            <tr>
+              <th>User Name</th>
+              <th>Email</th>
+              <th>Role</th>
+              <th>Provider</th>
+              <th>Uid</th>
+              <th>Action</th>
+            </tr>
+            <%= render partial: "product", collection: @users %>
+          </tbody>
+        </table>
+        <div class="pagding">
+          <%= link_to '<<', users_path(page: params[:page].to_i-1) %>
+          <% for i in 1..@total_page %>
+            <% if(params[:page].to_i == i) %>
+            <%= link_to i, users_path(page: i), class: "active" %>
+            <% else %>
+            <%= link_to i, users_path(page: i) %>
+            <% end %>
+          <% end %>
+          <%= link_to '>>', users_path(page: params[:page].to_i+1) %>
+        </div>
+      </section>
+    </div>
   </div>
 </section>
