--- a/book_shelf/app/views/user_mailer/welcome_email.html.erb
+++ b/book_shelf/app/views/user_mailer/welcome_email.html.erb
@@ -1,3 +1,9 @@
-Hi <%= @user.user_name %>,
+Hi <%= @user.user_name %>,<br>
 
-Thanks for registering! To confirm your registration click the URL below.
+Thanks for registering! <br>
+
+Your confirm token is <%= @user.confirm_token %> <br>
+
+To confirm your registration click the URL below. <br>
+
+<%= @url %> 
