format json active_model_serializer, fix bug reset password

--- a/book_shelf/app/views/books/_form.html.erb
+++ b/book_shelf/app/views/books/_form.html.erb
@@ -13,8 +13,8 @@
     </div>
   <% end  %>
 	<p>
-		<%= f.label :bookname  %><br>
-		<%= f.text_field :bookname , :class => 'form-control' , :placeholder => 'Book name' %>
+		<%= f.label :name  %><br>
+		<%= f.text_field :name , :class => 'form-control' , :placeholder => 'Book name' %>
 	</p>
 	<p>
 		<%= f.label :author %><br>
