--- a/book_shelf/app/views/layouts/application.html.erb
+++ b/book_shelf/app/views/layouts/application.html.erb
@@ -1,14 +1,87 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>BookShelf</title>
-    <%= csrf_meta_tags %>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Creative - Bootstrap 3 Responsive Admin Template">
+  <meta name="author" content="GeeksLabs">
+  <meta name="keyword" content="Creative, Dashboard, Admin, Template, Theme, Bootstrap, Responsive, Retina, Minimal">
+  <link rel="shortcut icon" href="img/favicon.png">
 
-    <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
-    <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
-  </head>
+  <title>BookShelf Rails app demo</title>
+  <%= javascript_include_tag 'application', 'rails' %>
+  <%= csrf_meta_tags %>
+  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track': 'reload' %>
+  <%= javascript_include_tag 'application', 'data-turbolinks-track': 'reload' %>
+  <%= stylesheet_link_tag 'bootstrap.min' %>
+  <%= stylesheet_link_tag 'bootstrap-theme' %>
 
-  <body>
-    <%= yield %>
-  </body>
+  <%= stylesheet_link_tag 'elegant-icons-style' %>
+  <%= stylesheet_link_tag 'font-awesome.min' %>
+  <%= stylesheet_link_tag 'style' %>
+  <%= stylesheet_link_tag 'style-responsive' %>
+</head>
+
+<body>
+  <section id="container" class="">
+    <header class="header dark-bg">
+      <div class="toggle-nav">
+        <div class="icon-reorder tooltips" data-original-title="Toggle Navigation" data-placement="bottom"></div>
+      </div>
+
+      <a href="index.html" class="logo">Book <span class="lite">Shelf</span></a>
+
+      <div class="nav search-row" id="top_menu">
+        <ul class="nav top-menu">
+          <li>
+            <form class="navbar-form">
+              <input class="form-control" placeholder="Search" type="text">
+            </form>
+          </li>                    
+        </ul>
+      </div>
+      <div class="top-nav notification-row">
+        <ul class="nav pull-right top-menu">
+          <% if logged_in? %>
+          <li class="dropdown">
+            <%= link_to "Logout", logout_path %>
+          </li>
+          <% else %>
+          <%= link_to "Login", login_path %> |
+          <%= link_to "Sign up", signup_path %>
+          <% end %>
+        </ul>
+      </div>
+    </header>      
+    <aside>
+      <div id="sidebar"  class="nav-collapse ">
+        <ul class="sidebar-menu">
+          <li>
+            <%= link_to users_path do %>
+            <span>Users</span>
+            <% end %>
+          </li>
+          <li>
+            <%= link_to books_path do %>
+            <span>Books</span>
+            <% end %>
+          </li>
+          
+        </ul>
+      </div>
+    </aside>
+
+    <section id="main-content">
+      <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>"><%= value %></div>
+      <% end %>
+      <%= yield %>
+    </section>
+  </section>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js" type="text/javascript"></script>
+  <%= javascript_include_tag 'jquery' %>
+  <%= javascript_include_tag 'bootstrap.min' %>
+  <%= javascript_include_tag 'jquery.scrollTo.min' %>
+  <%= javascript_include_tag 'jquery.nicescroll' %>
+</body>
 </html>
